--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="/attached_assets/generated_images/Pizza_logo_icon_orange_58b11467.png">
     <title>Slice of Heaven - Premium Pizza</title>
-    <meta name="description" content="Slice of Heaven - райська піца з характером. Taste the Sky. One Slice at a Time.">
+    <meta name="description" content="Slice of Heaven - райська піца. Taste the Sky. One Slice at a Time.">
   </head>
   <body>
     <div id="root"></div>
